--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <title>The Globe Tavern</title>
 </head>
 
-<body class="bg-image">
+<body>
 
   <nav class="navbar navbar-dark fixed-top">
     <div class="container-fluid">
@@ -55,7 +55,7 @@
   <div>
     <div class="welcome text-center">
       <h1>Welcome to the Globe Tavern</h1>
-      <p>Pool - sports - Live Music - Karaoke</p>
+      <p class="welcome-desc">Pool - Sports - Live Music - Karaoke</p>
     </div>
   </div>
 
@@ -63,9 +63,46 @@
     <img class="img-fluid " src="images/gt4.jpg" alt="">
   </div>
 
-  <div class="hoo text-center">
-    <h2>Hours of Operation</h2>
-    <ul>
+  <div class="reviews mx-5 p-5">
+    <figure class="text-center">
+      <blockquote class="blockquote">
+        <p>"Love it here! This is where you go for a guaranteed fun night."</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        <cite title="Source Title">Laura A.</cite>
+      </figcaption>
+    </figure>
+
+    <figure class="text-center">
+      <blockquote class="blockquote">
+        <p>"Friendly bar!! Good people!! A must go!!"</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        <cite title="Source Title">Maria C.</cite>
+      </figcaption>
+    </figure>
+
+    <figure class="text-center">
+      <blockquote class="blockquote">
+        <p>"Excellent staff, excellent atmosphere. I had a wonderful time there."</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        <cite title="Source Title">Jason H.</cite>
+      </figcaption>
+    </figure>
+  </div>
+
+  <div>
+    <img class="img-fluid " src="images/gt1.jpg" alt="">
+  </div>
+
+  <div class="address">
+    <div class="welcome text-center">
+      <h2>49-10 Skillman Avenue</h2>
+      <h3>Queens , New York</h3>
+      <p>(718) 651-2558</p>
+    </div>
+    <ul class="hoo">
       <li class="li-day">Sunday: 12pm - Close</li>
       <li class="li-day">Monday: 12pm - Close</li>
       <li class="li-day">Tuesday: 12pm - Close</li>
@@ -74,18 +111,6 @@
       <li class="li-day">Friday: 12pm - Close</li>
       <li class="li-day">Saturday: 12pm - Close</li>
     </ul>
-  </div>
-
-  <div>
-    <img class="img-fluid " src="images/gt1.jpg" alt="">
-  </div>
-
-  <div>
-    <div class="welcome text-center">
-      <h2>49-10 Skillman Avenue</h2>
-      <h3>Queens , New York</h3>
-      <p>(718) 651-2558</p>
-    </div>
   </div>
 
   <footer>
