--- a/contact.html
+++ b/contact.html
@@ -35,29 +35,32 @@
     </div>
   </nav>
 
-  <div class="hoo text-center">
-    <h2>Hours of Operation</h2>
-    <ul>
-      <li class="li-day">Sunday: 12pm - Close</li>
-      <li class="li-day">Monday: 12pm - Close</li>
-      <li class="li-day">Tuesday: 12pm - Close</li>
-      <li class="li-day">Wednesday: 12pm - Close</li>
-      <li class="li-day">Thursday: 12pm - Close</li>
-      <li class="li-day">Friday: 12pm - Close</li>
-      <li class="li-day">Saturday: 12pm - Close</li>
-    </ul>
-  </div>
+  <div class="contact">
+    <div class="hoo text-center address">
+      <h2>Hours of Operation</h2>
+      <ul>
+        <li class="li-day">Sunday: 12pm - Close</li>
+        <li class="li-day">Monday: 12pm - Close</li>
+        <li class="li-day">Tuesday: 12pm - Close</li>
+        <li class="li-day">Wednesday: 12pm - Close</li>
+        <li class="li-day">Thursday: 12pm - Close</li>
+        <li class="li-day">Friday: 12pm - Close</li>
+        <li class="li-day">Saturday: 12pm - Close</li>
+      </ul>
+    </div>
 
-  <div>
-    <div class="welcome text-center">
-      <h2>49-10 Skillman Avenue</h2>
-      <h3>Queens , New York</h3>
-      <p>(718) 651-2558</p>
+    <div>
+      <div class="welcome text-center">
+        <h2>49-10 Skillman Avenue</h2>
+        <h3>Queens , New York</h3>
+        <p>(718) 651-2558</p>
+        <p>email: rjskillmaninc@gmail.com</p>
+      </div>
     </div>
   </div>
 
   <footer>
-    <div class="foot">
+    <div class="foot sticky-bottom">
       <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
           class="fa-xl fa-brands fa-facebook-f"></i></a>
     </div>
