--- a/events.html
+++ b/events.html
@@ -36,7 +36,7 @@
       </nav>
 
     <footer>
-        <div class="foot">
+        <div class="foot sticky-bottom">
             <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
                     class="fa-xl fa-brands fa-facebook-f"></i></a>
         </div>
