--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <title>The Globe Tavern</title>
 </head>
@@ -97,7 +98,7 @@
   </div>
 
   <footer>
-    <div class="foot">
+    <div class="foot sticky-bottom">
       <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
           class="fa-xl fa-brands fa-facebook-f"></i></a>
     </div>
