--- a/index.html
+++ b/index.html
@@ -2,112 +2,139 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <title>The Globe Tavern</title>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand logo" href="#">The Globe Tavern</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="#">Home</a>
-          <a class="nav-link" href="events.html">Events</a>
-          <a class="nav-link" href="gallery.html">Gallery</a>
-          <a class="nav-link" href="contact.html">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand logo" href="#">The Globe Tavern</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="events.html">Events</a>
+                    <a class="nav-link" href="gallery.html">Gallery</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </div>
+            </div>
         </div>
-      </div>
+    </nav>
+
+    <div>
+        <div class="welcome text-center">
+            <h1>Welcome to the Globe Tavern</h1>
+            <p class="welcome-desc">Pool - Sports - Live Music - Karaoke</p>
+        </div>
     </div>
-  </nav>
+    <section>
+        <div class="index-img reveal">
+            <img class="img-fluid " src="images/gt4.jpg" alt="">
+        </div>
+    </section>
 
-  <div>
-    <div class="welcome text-center">
-      <h1>Welcome to the Globe Tavern</h1>
-      <p class="welcome-desc">Pool - Sports - Live Music - Karaoke</p>
-    </div>
-  </div>
+    <section>
+        <div class="reviews mx-3 p-3 reveal">
+            <figure class="text-center">
+                <blockquote class="blockquote">
+                    <p>"Love it here! This is where you go for a guaranteed fun night."</p>
+                </blockquote>
+                <figcaption class="blockquote-footer">
+                    <cite title="Source Title">Laura A.</cite>
+                </figcaption>
+            </figure>
 
-  <div>
-    <img class="img-fluid " src="images/gt4.jpg" alt="">
-  </div>
+            <figure class="text-center">
+                <blockquote class="blockquote">
+                    <p>"Friendly bar!! Good people!! A must go!!"</p>
+                </blockquote>
+                <figcaption class="blockquote-footer">
+                    <cite title="Source Title">Maria C.</cite>
+                </figcaption>
+            </figure>
 
-  <div class="reviews mx-3 p-3">
-    <figure class="text-center">
-      <blockquote class="blockquote">
-        <p>"Love it here! This is where you go for a guaranteed fun night."</p>
-      </blockquote>
-      <figcaption class="blockquote-footer">
-        <cite title="Source Title">Laura A.</cite>
-      </figcaption>
-    </figure>
+            <figure class="text-center">
+                <blockquote class="blockquote">
+                    <p>"Excellent staff, excellent atmosphere. I had a wonderful time there."</p>
+                </blockquote>
+                <figcaption class="blockquote-footer">
+                    <cite title="Source Title">Jason H.</cite>
+                </figcaption>
+            </figure>
+        </div>
+    </section>
 
-    <figure class="text-center">
-      <blockquote class="blockquote">
-        <p>"Friendly bar!! Good people!! A must go!!"</p>
-      </blockquote>
-      <figcaption class="blockquote-footer">
-        <cite title="Source Title">Maria C.</cite>
-      </figcaption>
-    </figure>
+    <section>
+        <div class="imdex-img reveal">
+            <img class="img-fluid " src="images/gt1.jpg" alt="">
+        </div>
+    </section>
 
-    <figure class="text-center">
-      <blockquote class="blockquote">
-        <p>"Excellent staff, excellent atmosphere. I had a wonderful time there."</p>
-      </blockquote>
-      <figcaption class="blockquote-footer">
-        <cite title="Source Title">Jason H.</cite>
-      </figcaption>
-    </figure>
-  </div>
+    <section>
+        <div class="address reveal">
+            <div class="welcome text-center">
+                <h2>49-10 Skillman Avenue</h2>
+                <h3>Queens , New York</h3>
+                <p>(718) 651-2558</p>
+            </div>
+            <ul class="hoo">
+                <li class="li-day">Sunday: 12pm - Close</li>
+                <li class="li-day">Monday: 12pm - Close</li>
+                <li class="li-day">Tuesday: 12pm - Close</li>
+                <li class="li-day">Wednesday: 12pm - Close</li>
+                <li class="li-day">Thursday: 12pm - Close</li>
+                <li class="li-day">Friday: 12pm - Close</li>
+                <li class="li-day">Saturday: 12pm - Close</li>
+            </ul>
+        </div>
+    </section>
 
-  <div>
-    <img class="img-fluid " src="images/gt1.jpg" alt="">
-  </div>
+    <footer>
+        <div class="foot">
+            <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
+                    class="fa-xl fa-brands fa-facebook-f"></i></a>
+        </div>
+    </footer>
 
-  <div class="address">
-    <div class="welcome text-center">
-      <h2>49-10 Skillman Avenue</h2>
-      <h3>Queens , New York</h3>
-      <p>(718) 651-2558</p>
-    </div>
-    <ul class="hoo">
-      <li class="li-day">Sunday: 12pm - Close</li>
-      <li class="li-day">Monday: 12pm - Close</li>
-      <li class="li-day">Tuesday: 12pm - Close</li>
-      <li class="li-day">Wednesday: 12pm - Close</li>
-      <li class="li-day">Thursday: 12pm - Close</li>
-      <li class="li-day">Friday: 12pm - Close</li>
-      <li class="li-day">Saturday: 12pm - Close</li>
-    </ul>
-  </div>
+    <script type="text/javascript">
+        window.addEventListener('scroll', reveal);
 
-  <footer>
-    <div class="foot sticky-bottom">
-      <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
-          class="fa-xl fa-brands fa-facebook-f"></i></a>
-    </div>
-  </footer>
+        function reveal() {
+            const reveals = document.querySelectorAll('.reveal');
 
-  <script src="script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"></script>
+            for (let i = 0; i < reveals.length; i++) {
+                const windowHeight = window.innerHeight;
+                const revealtop = reveals[i].getBoundingClientRect().top;
+                const revealpoint = 150;
+
+                if (revealtop < windowHeight - revealpoint) {
+                    reveals[i].classList.add('active');
+                }
+                else {
+                    reveals[i].classList.remove('active');
+                }
+            }
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
