--- a/gallery.html
+++ b/gallery.html
@@ -1,148 +1,111 @@
-<!-- <!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-<title>The Globe Tavern</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="gallery.css">
 </head>
 
 <body>
 
- 
-
-  <div class="gallery-container">
-    <div class="container">
-      <div class="images">
-        <img src="images/fb-pic.jpg" alt="" />
-        <img src="images/fb-pic1.jpg" alt="" />
-        <img src="images/gt1.jpg" alt="" />
-        <img src="images/gt3.jpg" alt="" />
-        <img src="images/gt8.jpg" alt="" />
-        <img src="images/gt4.jpg" alt="" />
-        <img src="images/gt2.jpg" alt="" />
-        <img src="images/gt5.png" alt="" />
-        <img src="images/gt6.png" alt="" />
-        <img src="images/gt7.png" alt="" />
-      </div>
-      <div class="modal">
-        <span class="close"><i class="fa-solid fa-xmark"></i></span>
-        <div class="modalContent">
-          <img src="" class="modalImg" />
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand logo" href="index.html">The Globe Tavern</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="events.html">Events</a>
+                    <a class="nav-link" href="#">Gallery</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </div>
+            </div>
         </div>
-      </div>
+    </nav>
+
+    <section class="gallery min-vh-100">
+        <div class="container-lg">
+            <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="col">
+                    <img src="images/fb-pic.jpg" class="gallery-item" alt="">
+                </div>
+
+                <div class="col">
+                    <img src="images/fb-pic1.jpg" class="gallery-item" alt="">
+                </div>
+
+                <div class="col">
+                    <img src="images/gt1.jpg" class="gallery-item" alt="">
+                </div>
+
+                <div class="col">
+                    <img src="images/gt3.jpg" class="gallery-item" alt="">
+                </div>
+
+                <div class="col">
+                    <img src="images/gt8.jpg" class="gallery-item" alt="">
+                </div>
+
+                <div class="col">
+                    <img src="images/gt4.jpg" class="gallery-item" alt="">
+                </div>
+
+                <div class="col">
+                    <img src="images/gt2.jpg" class="gallery-item" alt="">
+                </div>
+
+                <div class="col">
+                    <img src="images/gt5.png" class="gallery-item" alt="">
+                </div>
+                <div class="col">
+                    <img src="images/gt6.png" class="gallery-item" alt="">
+                </div>
+
+                <div class="col">
+                    <img src="images/gt7.png" class="gallery-item" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="modal fade" id="gallery-popup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="images/fb-pic.jpg" class="modal-img" alt="">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
+    <footer>
+        <div class="foot">
+            <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
+                    class="fa-xl fa-brands fa-facebook-f"></i></a>
+        </div>
+    </footer>
 
-
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"></script>
-  <script src="script.js"></script>
-  <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript">
+        document.addEventListener('click', function (e) {
+            if (e.target.classList.contains('gallery-item')) {
+                const src = e.target.getAttribute('src');
+                document.querySelector('.modal-img').src = src;
+                const myModal = new bootstrap.Modal(document.getElementById('gallery-popup'));
+                myModal.show();
+            }
+        })
+    </script>
+    <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
 </body>
 
-</html> -->
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="gall-css.css">
-    <title>Document</title>
-</head>
-<body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html">The Globe Tavern</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="index.html">Home</a>
-          <a class="nav-link" href="events.html">Events</a>
-          <a class="nav-link" href="#">Gallery</a>
-          <a class="nav-link" href="contact.html">Contact</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-<div class="image-section">
-  <div id="carouselExampleFade" class="carousel slide carousel-fade mt-5 mx-4 d-flex justify-content-center align-items-center  position-relative p2" data-bs-ride="carousel">
-    <div class="carousel-inner ">
-      <div class="carousel-item active">
-        <img src="images/fb-pic.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/fb-pic1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/gt1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/gt3.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/gt8.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/gt4.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/gt2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/gt5.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div>
-
-
-
-  <footer class="gallery-footer-container">
-    <div class="gallery-footer fixed-bottom">
-      <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
-          class="fa-xl fa-brands fa-facebook-f"></i></a>
-    </div>
-  </footer>
-      
-  <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
-      <script src="script.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-</body>
 </html>
