--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
-<title>The Globe Tavern</title>
+<title>Contact The Globe Tavern</title>
 </head>
 
 <body>
@@ -36,27 +36,43 @@
   </nav>
 
   <div class="contact">
-    <div class="hoo text-center address">
-      <h2>Hours of Operation</h2>
-      <ul>
-        <li class="li-day">Sunday: 12pm - Close</li>
-        <li class="li-day">Monday: 12pm - Close</li>
-        <li class="li-day">Tuesday: 12pm - Close</li>
-        <li class="li-day">Wednesday: 12pm - Close</li>
-        <li class="li-day">Thursday: 12pm - Close</li>
-        <li class="li-day">Friday: 12pm - Close</li>
-        <li class="li-day">Saturday: 12pm - Close</li>
-      </ul>
+        <h2>Please contact us for any inquiries</h2>
+        <div class="contact-form g-3 text-center">
+              <form action="https://formsubmit.co/gsford2020@gmail.com" method="POST">
+                    <div class="col-md-4 p-3">
+                          <label for="name" class="form-label">Name:</label>
+                          <input type="name" class="form-control" id="name" required>
+                    </div>
+                    <div class="col-md-4 p-3">
+                          <label for="email" class="form-label">Email:</label>
+                          <input type="email" class="form-control" id="email" required>
+                    </div>
+                    <div>
+                      <label for="message" class="form-label p-3">Message:</label>
+                    </div>
+                    <div class="form-floating p-3" style="margin-top: -25px;">
+                          <textarea name="message" class="form-control" id="floatingTextarea"></textarea>
+                          <label for="floatingTextarea"></label>
+                    </div>
+                    <div>
+                          <button class="btn btn-bg col-6" type="submit">CHEERS!</button>
+                    </div>
+              </form>
+          </div>
     </div>
 
-    <div>
-      <div class="welcome text-center">
+    <section>
+      <div class="index-img contact-img">
+          <img class="img-fluid " src="images/gt9.jpg" alt="">
+      </div>
+  </section>
+
+      <div class="welcome text-center contact-address">
         <h2>49-10 Skillman Avenue</h2>
         <h3>Queens , New York</h3>
         <p>(718) 651-2558</p>
-        <p>email: rjskillmaninc@gmail.com</p>
+        <!-- <p>email: rjskillmaninc@gmail.com</p> -->
       </div>
-    </div>
   </div>
 
   <footer>
