--- a/contact.html
+++ b/contact.html
@@ -39,25 +39,22 @@
         <h2>Please contact us for any inquiries</h2>
         <div class="contact-form g-3 text-center">
               <form action="https://formsubmit.co/gsford2020@gmail.com" method="POST">
-                    <div class="col-md-4 p-3">
-                          <label for="name" class="form-label">Name:</label>
-                          <input type="name" class="form-control" id="name" required>
-                    </div>
-                    <div class="col-md-4 p-3">
-                          <label for="email" class="form-label">Email:</label>
-                          <input type="email" class="form-control" id="email" required>
-                    </div>
-                    <div>
-                      <label for="message" class="form-label p-3">Message:</label>
-                    </div>
-                    <div class="form-floating p-3" style="margin-top: -25px;">
-                          <textarea name="message" class="form-control" id="floatingTextarea"></textarea>
-                          <label for="floatingTextarea"></label>
-                    </div>
-                    <div>
-                          <button class="btn btn-bg col-6" type="submit">CHEERS!</button>
-                    </div>
-              </form>
+              <div class="mb-3 p-3">
+                <label for="exampleFormControlInput1" class="form-label">Name:</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1">
+              </div>
+              <div class="mb-3 p-3">
+                <label for="exampleFormControlInput1" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1">
+              </div>
+              <div class="mb-3 p-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Message:</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <div>
+                    <button class="btn btn-bg col-6" type="submit">CHEERS!</button>
+              </div>
+            </form>
           </div>
     </div>
 
