--- a/contact.html
+++ b/contact.html
@@ -37,22 +37,22 @@
 
   <div class="contact">
         <h2>Please contact us for any inquiries</h2>
-        <div class="contact-form g-3 text-center">
+        <div class="contact-form row g-3 text-center">
             <form action="https://formsubmit.co/gsford2020@gmail.com" method="POST">
-              <div class="mb-3 p-3">
+              <div class="col-md-4 offset-md-4 mb-3 p-3">
                 <label for="exampleFormControlInput1" class="form-label">Name:</label>
                 <input type="text" class="form-control" id="exampleFormControlInput1" name="name">
               </div>
-              <div class="mb-3 p-3">
+              <div class="col-md-4 offset-md-4 mb-3 p-3">
                 <label for="exampleFormControlInput1" class="form-label">Email:</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" name="email">
               </div>
-              <div class="mb-3 p-3">
+              <div class="col-md-4 offset-md-4 mb-3 p-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Message:</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="message"></textarea>
               </div>
               <div>
-                <button class="btn btn-bg col-6" type="submit">CHEERS!</button>
+                <button class="col-md-4 btn btn-bg" type="submit">CHEERS!</button>
               </div>
             </form>
           </div>
