--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="zzzzstyle.css">
 </head>
 <title>The Globe Tavern</title>
 </head>
@@ -38,9 +37,9 @@
     </nav>
 
     <div>
-        <div class="welcome text-center">
+        <div class="welcome text-center index-title1">
             <h1>Welcome to the Globe Tavern</h1>
-            <p class="welcome-desc">Pool - Sports - Live Music - Karaoke</p>
+            <p class="welcome-desc index-title2">Pool - Sports - Live Music - Karaoke</p>
         </div>
     </div>
     <section>
