--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="zzzzstyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <title>The Globe Tavern</title>
 </head>
