--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </nav>
 
     <div>
-        <div class="welcome text-center index-title1">
+        <div class="welcome text-center">
             <h1>Welcome to the Globe Tavern</h1>
-            <p class="welcome-desc index-title2">Pool - Sports - Live Music - Karaoke</p>
+            <p class="welcome-desc">Pool - Sports - Live Music - Karaoke</p>
         </div>
     </div>
     <section>
