--- a/index.html
+++ b/index.html
@@ -8,132 +8,135 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-</head>
-<title>The Globe Tavern</title>
+    <title>The Globe Tavern</title>
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand logo" href="#">The Globe Tavern</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="#">Home</a>
-                    <a class="nav-link" href="events.html">Events</a>
-                    <a class="nav-link" href="gallery.html">Gallery</a>
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </div>
-            </div>
+    <nav class="nav-container">
+        <div class="logo">
+            <a href="#">The Globe Tavern</a>
         </div>
-    </nav>
-
-    <div>
-        <div class="welcome text-center">
-            <h1>Welcome to the Globe Tavern</h1>
-            <p class="welcome-desc">Pool - Sports - Live Music - Karaoke</p>
-        </div>
-    </div>
-    <section>
-        <div class="index-img reveal">
-            <img class="img-fluid " src="images/gt4.jpg" alt="">
-        </div>
-    </section>
-
-    <section>
-        <div class="reviews mx-3 p-3 reveal">
-            <figure class="text-center">
-                <blockquote class="blockquote">
-                    <p>"Love it here! This is where you go for a guaranteed fun night."</p>
-                </blockquote>
-                <figcaption class="blockquote-footer">
-                    <cite title="Source Title">Laura A.</cite>
-                </figcaption>
-            </figure>
-
-            <figure class="text-center">
-                <blockquote class="blockquote">
-                    <p>"Friendly bar!! Good people!! A must go!!"</p>
-                </blockquote>
-                <figcaption class="blockquote-footer">
-                    <cite title="Source Title">Maria C.</cite>
-                </figcaption>
-            </figure>
-
-            <figure class="text-center">
-                <blockquote class="blockquote">
-                    <p>"Excellent staff, excellent atmosphere. I had a wonderful time there."</p>
-                </blockquote>
-                <figcaption class="blockquote-footer">
-                    <cite title="Source Title">Jason H.</cite>
-                </figcaption>
-            </figure>
-        </div>
-    </section>
-
-    <section>
-        <div class="imdex-img reveal">
-            <img class="img-fluid " src="images/gt1.jpg" alt="">
-        </div>
-    </section>
-
-    <section>
-        <div class="address reveal">
-            <div class="welcome text-center">
-                <h2>49-10 Skillman Avenue</h2>
-                <h3>Queens , New York</h3>
-                <p>(718) 651-2558</p>
-            </div>
-            <ul class="hoo">
-                <li class="li-day">Sunday: 12pm - Close</li>
-                <li class="li-day">Monday: 12pm - Close</li>
-                <li class="li-day">Tuesday: 12pm - Close</li>
-                <li class="li-day">Wednesday: 12pm - Close</li>
-                <li class="li-day">Thursday: 12pm - Close</li>
-                <li class="li-day">Friday: 12pm - Close</li>
-                <li class="li-day">Saturday: 12pm - Close</li>
+        <div class="nav-links">
+            <ul class="nav-menu">
+                <li><a class="nav-link" href="#">Home</a></li>
+                <li><a class="nav-link" href="gallery.html">Gallery</a></li>
+                <li><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
         </div>
-    </section>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
+    <div class="container">
+        
 
+        <div class="grid-container">
+            <div class="grid-item">
+                <div class="header-container">
+                    <div class="header-h1">
+                        <h1>Welcome to
+                            <br><span>The Globe Tavern</span>
+                        </h1>
+                    </div>
+                    <div class="header-p">
+                        <p>Pool - Sports - Live Music - Karaoke</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid-item">
+                <img src="../Globe Tavern/images/gt4.jpg" alt="" />
+            </div>
+
+            <div class="grid-item events">
+                <p>Upcoming Events</p>
+                <div>
+                    <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2F100063526751714%2Fvideos%2F1066844104013707%2F&show_text=true&width=267&t=0" width="267" height="591" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                </div>
+            </div>
+
+            <div class="grid-item">
+                <img src="../Globe Tavern/images/gt1.jpg" alt="" />
+            </div>
+
+            <div class="grid-item">
+                <figure class="text-center">
+                    <blockquote class="blockquote">
+                        <p>"Love it here! This is where you go for a guaranteed fun night."</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                        <cite title="Source Title">- Laura A.</cite>
+                    </figcaption>
+                </figure>
+                <br>
+                <figure class="text-center">
+                    <blockquote class="blockquote">
+                        <p>"Friendly bar!! Good people!! A must go!!"</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                        <cite title="Source Title">- Maria C.</cite>
+                    </figcaption>
+                </figure>
+                <br>
+                <figure class="text-center">
+                    <blockquote class="blockquote">
+                        <p>"Excellent staff, excellent atmosphere. I had a wonderful time there."</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                        <cite title="Source Title">- Jason H.</cite>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="grid-item">
+                <img src="../Globe Tavern/images/fall-beers.jpg" alt="" />
+            </div>
+
+            <div class="grid-item info">
+                <div class="address">
+                    <p>49-10 Skillman Avenue</p>
+                    <p>Queens , New York</p>
+                    <p>(718) 651-2558</p>
+                </div>
+                <div class="hours">
+                    <ul>
+                        <li>Sunday: 12pm - Close</li>
+                        <li>Monday: 12pm - Close</li>
+                        <li>Tuesday: 12pm - Close</li>
+                        <li>Wednesday: 12pm - Close</li>
+                        <li>Thursday: 12pm - Close</li>
+                        <li>Friday: 12pm - Close</li>
+                        <li>Saturday: 12pm - Close</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <!-- <footer>
+            <div class="social-links">
+                <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/" target="_blank"><i
+                        class="fa-xl fa-brands fa-facebook-f"></i></a>
+            </div>
+            <div class="gsford">
+                <p>Website designed by <a href="https://gsford.tech/">G.S. Ford</a></p>
+            </div>
+        </footer> -->
+    </div>
     <footer>
-        <div class="foot">
-            <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
+        <div class="social-links">
+            <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/" target="_blank"><i
                     class="fa-xl fa-brands fa-facebook-f"></i></a>
+        </div>
+        <div class="gsford">
+            <p>Website designed by <a href="https://gsford.tech/">G.S. Ford</a></p>
         </div>
     </footer>
 
-    <script type="text/javascript">
-        window.addEventListener('scroll', reveal);
-
-        function reveal() {
-            const reveals = document.querySelectorAll('.reveal');
-
-            for (let i = 0; i < reveals.length; i++) {
-                const windowHeight = window.innerHeight;
-                const revealtop = reveals[i].getBoundingClientRect().top;
-                const revealpoint = 150;
-
-                if (revealtop < windowHeight - revealpoint) {
-                    reveals[i].classList.add('active');
-                }
-                else {
-                    reveals[i].classList.remove('active');
-                }
-            }
-        }
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
