--- a/gallery.html
+++ b/gallery.html
@@ -4,96 +4,101 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>The Globe Tavern Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="gallery.css">
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand logo" href="index.html">The Globe Tavern</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="index.html">Home</a>
-                    <a class="nav-link" href="events.html">Events</a>
-                    <a class="nav-link" href="#">Gallery</a>
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </div>
-            </div>
+    <nav class="nav-container">
+        <div class="logo">
+            <a href="index.html">The Globe Tavern</a>
+        </div>
+        <div class="nav-links">
+            <ul class="nav-menu">
+                <li><a class="nav-link" href="index.html">Home</a></li>
+                <li><a class="nav-link" href="#">Gallery</a></li>
+                <li><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
     </nav>
 
-    <section class="gallery min-vh-100">
-        <div class="container-lg">
-            <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
-                <div class="col">
-                    <img src="images/fb-pic.jpg" class="gallery-item" alt="">
-                </div>
+    <div class="container">
+        <section class="gallery min-vh-100">
+            <div class="container-lg">
+                <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+                    <div class="col">
+                        <img src="images/fb-pic.jpg" class="gallery-item" alt="">
+                    </div>
 
-                <div class="col">
-                    <img src="images/fb-pic1.jpg" class="gallery-item" alt="">
-                </div>
+                    <div class="col">
+                        <img src="images/fb-pic1.jpg" class="gallery-item" alt="">
+                    </div>
 
-                <div class="col">
-                    <img src="images/gt1.jpg" class="gallery-item" alt="">
-                </div>
+                    <div class="col">
+                        <img src="images/gt1.jpg" class="gallery-item" alt="">
+                    </div>
 
-                <div class="col">
-                    <img src="images/gt3.jpg" class="gallery-item" alt="">
-                </div>
+                    <div class="col">
+                        <img src="images/gt3.jpg" class="gallery-item" alt="">
+                    </div>
 
-                <div class="col">
-                    <img src="images/gt8.jpg" class="gallery-item" alt="">
-                </div>
+                    <div class="col">
+                        <img src="images/gt8.jpg" class="gallery-item" alt="">
+                    </div>
 
-                <div class="col">
-                    <img src="images/gt4.jpg" class="gallery-item" alt="">
-                </div>
+                    <div class="col">
+                        <img src="images/gt4.jpg" class="gallery-item" alt="">
+                    </div>
 
-                <div class="col">
-                    <img src="images/gt2.jpg" class="gallery-item" alt="">
-                </div>
+                    <div class="col">
+                        <img src="images/gt2.jpg" class="gallery-item" alt="">
+                    </div>
 
-                <div class="col">
-                    <img src="images/gt5.png" class="gallery-item" alt="">
-                </div>
-                <div class="col">
-                    <img src="images/gt6.png" class="gallery-item" alt="">
-                </div>
+                    <div class="col">
+                        <img src="images/gt5.png" class="gallery-item" alt="">
+                    </div>
+                    <div class="col">
+                        <img src="images/gt6.png" class="gallery-item" alt="">
+                    </div>
 
-                <div class="col">
-                    <img src="images/gt7.png" class="gallery-item" alt="">
+                    <div class="col">
+                        <img src="images/gt7.png" class="gallery-item" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="modal fade" id="gallery-popup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="images/fb-pic.jpg" class="modal-img" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-
-    <div class="modal fade" id="gallery-popup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="images/fb-pic.jpg" class="modal-img" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-
+    </div>    
     <footer>
-        <div class="foot">
-            <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/"><i
+        <div class="social-links">
+            <a href="http://www.facebook.com/The-Globe-Tavern-113474548686125/" target="_blank"><i
                     class="fa-xl fa-brands fa-facebook-f"></i></a>
+        </div>
+        <div class="gsford">
+            <p>Website designed by <a href="https://gsford.tech/">G.S. Ford</a></p>
         </div>
     </footer>
 
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript">
         document.addEventListener('click', function (e) {
@@ -106,6 +111,7 @@
         })
     </script>
     <script src="https://kit.fontawesome.com/c6f3513d2f.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
