--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="grid-item">
-                <img src="../Globe Tavern/images/gt4.jpg" alt="" />
+                <img src="images/gt4.jpg" alt="" />
             </div>
 
             <div class="grid-item events">
@@ -60,7 +60,7 @@
             </div>
 
             <div class="grid-item">
-                <img src="../Globe Tavern/images/gt1.jpg" alt="" />
+                <img src="images/gt1.jpg" alt="" />
             </div>
 
             <div class="grid-item">
@@ -93,7 +93,7 @@
             </div>
 
             <div class="grid-item">
-                <img src="../Globe Tavern/images/fall-beers.jpg" alt="" />
+                <img src="images/fall-beers.jpg" alt="" />
             </div>
 
             <div class="grid-item info">
