--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                 class="fa-xl fa-brands fa-facebook-f"></i></a>
     </div>
     <div class="gsford">
-        <p>Website designed by <a href="https://gsford.tech/">G.S. Ford</a></p>
+        <p>Website designed by <a href="https://gsford.tech/" target="_blank">G.S. Ford</a></p>
     </div>
 </footer>
 
